firefox modal dialogs bug fixed

--- a/src/main/webapp/partials/admin/users.html
+++ b/src/main/webapp/partials/admin/users.html
@@ -6,7 +6,7 @@
     <div class="modal fade" id="modalUser">
         <form name="userForm" class="form-horizontal InputForm" role="form">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#modalUser')" aria-hidden="true">&times;</button>
                 <h5 class="modal-title green bold">{{modaltitle}}</h5>
             </div>
             <div class="modal-body">
