--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -33,7 +33,7 @@
 <div class="modal fade" id="modalOntology">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <button type="button" class="close" ng-click="close('#modalOntology')" aria-hidden="true">&times;</button>
             <h5 class="modal-title green bold">Add ontology</h5>
         </div>
 
@@ -86,7 +86,7 @@
     <div class="modal" id="fullModal">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <button type="button" class="close"  ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
             <h5 class="modal-title green bold">MiniDix</h5>
         </div>
         <div class="modal-body">
