--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -50,7 +50,7 @@
     <div class="modal-content">
         <form name="changePasswordForm" class="form-horizontal InputForm" role="form">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#modalChangePassword')" aria-hidden="true">&times;</button>
                 <h5 class="modal-title green bold">Change password</h5>
             </div>
             <div class="modal-body">
