--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -74,7 +74,7 @@
             <div class="modal-content">
                 <form name="documentForm" class="form-horizontal InputForm" role="form" novalidate>
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <button type="button" class="close" ng-click="close('#modalDocument')" aria-hidden="true">&times;</button>
                         <h5 class="modal-title green bold">Edit Document</h5>
                     </div>
 
