--- a/src/main/webapp/partials/extraction-and-loading/d2rq-mapping.html
+++ b/src/main/webapp/partials/extraction-and-loading/d2rq-mapping.html
@@ -8,7 +8,7 @@
     <div class="modal-content">
         <form name="mappingGroupForm" class="form-horizontal InputForm" role="form" novalidate>
             <div class="modal-header">
-                <button type="button" class="close" ng-click="close('#modalLogin')" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#modalMappingGroup')" aria-hidden="true">&times;</button>
                 <h5 class="modal-title green bold">Add mapping group</h5>
             </div>
             <div class="modal-body">
@@ -52,7 +52,7 @@
     <div class="modal fade" id="modalMapping">
         <form name="mappingForm" class="form-horizontal InputForm" role="form" novalidate>
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#modalMapping')" aria-hidden="true">&times;</button>
                 <h5 class="modal-title green bold">{{modaltitle}}</h5>
             </div>
             <div class="modal-body">
