--- a/src/main/webapp/partials/querying-and-exploration/search.html
+++ b/src/main/webapp/partials/querying-and-exploration/search.html
@@ -5,7 +5,7 @@
     <div class="modal" id="fullModal">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
                 <h5 class="modal-title green bold">Faceted Search</h5>
             </div>
             <div class="modal-body">
