--- a/src/main/webapp/partials/querying-and-exploration/virtuoso.html
+++ b/src/main/webapp/partials/querying-and-exploration/virtuoso.html
@@ -39,7 +39,7 @@
   <div class="modal fade" id="fullModal">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Virtuoso SPARQLEndpoint</h5>
     </div>
     <div class="modal-body">
