--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -14,7 +14,7 @@
   <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="close('#modalEndpoint')" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">{{modaltitle}}</h5>
     </div>
     <div class="modal-body">
@@ -104,7 +104,7 @@
   <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="close('#modalDatabase')" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">{{modaltitle}}</h5>
     </div>
     <div class="modal-body">
