--- a/src/main/webapp/partials/settings/datasets.html
+++ b/src/main/webapp/partials/settings/datasets.html
@@ -9,7 +9,7 @@
   <div class="modal-content">
     <form name="graphForm" class="form-horizontal InputForm" role="form" novalidate>
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <button type="button" class="close" ng-click="close('#modalGraph')" aria-hidden="true">&times;</button>
         <h5 class="modal-title green bold">{{modaltitle}}</h5>
       </div>
 
@@ -237,7 +237,7 @@
   <div class="modal-content">
       <form name="groupForm" class="form-horizontal InputForm" role="form" novalidate>
           <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <button type="button" class="close" ng-click="close('#modalGroup')" aria-hidden="true">&times;</button>
               <h5 class="modal-title green bold">{{modaltitle}}</h5>
           </div>
 
