open solr search window directly from side menu

--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -12,10 +12,25 @@
 				  </div>
 				  <div id="{{group.id}}" class="panel-collapse collapse" ng-controller="SidebarCtrl">
 					  <div class="list-item" ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items">
-							<h6><a class="list-group-item" target="{{item.target}}" href="{{item.route}}">{{item.name}}</a></h6>
+							<h6>
+                                <a ng-show="item.route!=null" class="list-group-item" target="{{item.target}}" href="{{item.route}}">{{item.name}}</a>
+                                <a ng-show="item.route==null" class="list-group-item" data-toggle="modal" href="" ng-click="setDirectUrl('{{item.url}}'); openModal('fullModalDirect');">{{item.name}}</a>
+                            </h6>
 					  </div>
 				  </div>
 			  	</div>
+
+                <div class="modal" id="fullModalDirect">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" ng-click="close('#fullModalDirect')" aria-hidden="true">&times;</button>
+                            <h5 class="modal-title green bold">Faceted Search</h5>
+                        </div>
+                        <div class="modal-body">
+                            <modal-iframe></modal-iframe>
+                        </div>
+                    </div>
+                </div>
 			</div>
 			
 		</div>
