--- a/src/main/webapp/partials/extraction-and-loading/upload-file.html
+++ b/src/main/webapp/partials/extraction-and-loading/upload-file.html
@@ -125,7 +125,7 @@
         <div class="form-group">
             <label class="col-xs-4 control-label">Files</label>
             <div class="col-xs-8">
-                <input type="file" ng-file-select="onFileSelect($files)" id="fileName" name="fileName" multiple/>
+                <input type="file" ng-file-select="onFileSelect($files)" id="fileName" name="fileName"/>
             </div>
         </div>
         <div class="form-group">
