ownerDocumentNumber property added

--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -185,6 +185,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label for="docnum" class="col-lg-4 control-label">Document Number by Owner</label>
+                            <div class="col-lg-8">
+                                <input type="text" class="form-control" id="docnum" name="docnum" ng-model="document.ownerDocumentNumber" />
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="name" class="col-lg-4 control-label">Document Name by Owner</label>
                             <div class="col-lg-8">
                                 <input type="text" class="form-control" id="name" name="name" ng-model="document.ownerDocumentName" />
