accDescription is optional

--- a/src/main/webapp/partials/extraction-and-loading/upload-file.html
+++ b/src/main/webapp/partials/extraction-and-loading/upload-file.html
@@ -80,10 +80,7 @@
         <div class="form-group">
             <label for="description" class="col-lg-4 control-label">Short Description</label>
             <div class="col-lg-8">
-                <textarea class="form-control" id="description" name="description" rows="5" ng-model="document.accDescription" placeholder="Fill a short description" required></textarea>
-                <div class="error" ng-show="documentForm.description.$dirty && documentForm.description.$invalid">Invalid:
-                    <span ng-show="documentForm.description.$error.required">Specify description</span>
-                </div>
+                <textarea class="form-control" id="description" name="description" rows="5" ng-model="document.accDescription" placeholder="Fill a short description"></textarea>
             </div>
         </div>
         <div class="form-group">
