hide isApplicable field in upload form (always true)

--- a/src/main/webapp/partials/extraction-and-loading/upload-file.html
+++ b/src/main/webapp/partials/extraction-and-loading/upload-file.html
@@ -83,12 +83,12 @@
                 <textarea class="form-control" id="description" name="description" rows="5" ng-model="document.accDescription" placeholder="Fill a short description"></textarea>
             </div>
         </div>
-        <div class="form-group">
+        <!--div class="form-group">
             <label for="applicable" class="col-lg-4 control-label">Document Applicable</label>
             <div class="col-lg-8">
                 <input type="checkbox" id="applicable" name="applicable" ng-model="document.isApplicable" />
             </div>
-        </div>
+        </div-->
         <div class="form-group">
             <label class="col-lg-4 control-label">Document Type</label>
             <div class="col-lg-8">
