--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -86,15 +86,15 @@
                                     <table class="table table-striped">
                                         <tr ng-repeat="p in document.hasProject">
                                             <td>
-                                                <p class="form-control-static">{{p.name}}</p>
+                                                <p class="form-control-static">{{p.number}}</p>
                                             </td>
                                             <td>
                                                 <button type="button" class="btn btn-default btn-xs" ng-click="removeProject(p)"><span class="glyphicon glyphicon-remove"></span></button>
                                             </td>
                                         </tr>
-                                        <tr ng-show="document.hasProject.length < projects.length">
+                                        <tr>
                                             <td>
-                                                <select ng-model="newAssignedProject" ng-options="p as p.name for p in projects | filter:notAssigned | orderBy:'name'" ng-change="assignProject()"></select>
+                                                <select chosen data-placeholder=" " width="'100%'" ng-model="newAssignedProject" ng-options="p as p.number for p in projects | filter:notAssigned | orderBy:'number'" ng-change="assignProject()"></select>
                                             </td>
                                             <td>
                                                 <button type="button" class="btn btn-default btn-xs" ng-click="showCreateProject=true;"><span class="glyphicon glyphicon-plus"></span></button>
@@ -102,6 +102,8 @@
                                         </tr>
                                         <tr ng-show="showCreateProject">
                                             <td>
+                                                <input type="text" ng-model="newProjectNumber" placeholder="New project number"/>
+                                                <br/>
                                                 <input type="text" ng-model="newProjectName" placeholder="New project name"/>
                                             </td>
                                             <td>
@@ -146,7 +148,7 @@
                             <label class="col-lg-4 control-label">Owner Name</label>
                             <div class="col-lg-8 row">
                                 <div class="col-lg-9">
-                                    <select id="owner" class="form-control" ng-model="document.owner" ng-options="o as o.name for o in owners" required></select>
+                                    <select chosen data-placeholder=" " width="'100%'" id="owner" class="form-control" ng-model="document.owner" ng-options="o as o.name for o in owners" required></select>
                                 </div>
                                 <div class="col-lg-3">
                                     <button type="button" class="btn btn-default btn-xs" ng-click="showCreateOwner=true;"><span class="glyphicon glyphicon-plus"></span></button>
