documentType is hidden

--- a/src/main/webapp/partials/extraction-and-loading/upload-file.html
+++ b/src/main/webapp/partials/extraction-and-loading/upload-file.html
@@ -89,12 +89,12 @@
                 <input type="checkbox" id="applicable" name="applicable" ng-model="document.isApplicable" />
             </div>
         </div-->
-        <div class="form-group">
+        <!--div class="form-group">
             <label class="col-lg-4 control-label">Document Type</label>
             <div class="col-lg-8">
                 <select id="type" class="form-control" ng-model="document.documentType" ng-options="dt.value as dt.label for dt in documentTypes" required></select>
             </div>
-        </div>
+        </div-->
         <div class="form-group">
             <label for="docnum" class="col-lg-4 control-label">Document Number by Owner</label>
             <div class="col-lg-8">
