--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -16,7 +16,17 @@
         Uploaded Documents
     </h4>
 
-    Search: <input ng-model="searchText" ng-change="filter()">
+    <div class="row">
+        <div class="row col-lg-6">
+            <div class="col-lg-2">Search: </div>
+            <div class="col-lg-4"><input type="text" ng-model="searchText" ng-change="filter()"></div>
+            <div class="col-lg-2">Field: </div>
+            <div class="col-lg-4">
+                <select ng-model="searchField" ng-options="field.value as field.label for field in filterFields" ng-change="filter()"></select>
+            </div>
+        </div>
+    </div>
+
     <table class="table table-striped">
         <thead>
         <tr>
