use jquery datepicker instead of html5 input date (Firefox doesn't support html5 input date)

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -349,3 +349,8 @@ form{
 .scrollable {
     overflow: auto;
 }
+
+/* Show jquery datepicker above dialogs */
+.ui-datepicker {
+    z-index: 10000 !important;
+}
