--- a/src/main/webapp/partials/extraction-and-loading/upload-file.html
+++ b/src/main/webapp/partials/extraction-and-loading/upload-file.html
@@ -56,7 +56,7 @@
         <div class="form-group">
             <label for="received" class="col-lg-4 control-label">Date Document Received</label>
             <div class="col-lg-8">
-                <input type="date" class="form-control" id="received" name="received" ng-model="document.dateReceived" required />
+                <input ui-date="{dateFormat: 'yy-mm-dd'}" ui-date-format="yy-mm-dd" class="form-control" id="received" name="received" ng-model="document.dateReceived" required />
                 <div class="error" ng-show="documentForm.received.$dirty && documentForm.received.$invalid">Invalid:
                     <span ng-show="documentForm.received.$error.required">Specify received date</span>
                 </div>
@@ -122,7 +122,7 @@
         <div class="form-group">
             <label for="data" class="col-lg-4 control-label">Document Revision Date by Owner</label>
             <div class="col-lg-8">
-                <input type="date" class="form-control" id="data" name="data" ng-model="document.ownerDocumentRevisionData" />
+                <input ui-date="{dateFormat: 'yy-mm-dd'}" ui-date-format="yy-mm-dd" class="form-control" id="data" name="data" ng-model="document.ownerDocumentRevisionData" />
             </div>
         </div>
         <div class="form-group">
